[gd_scene load_steps=10 format=2]

[ext_resource path="res://game/bolt/NodeShadow.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/tilesets/tileset_arena_elements.png" type="Texture" id=2]
[ext_resource path="res://assets/sound/sfx/_pa/skills/teleport_loop_v2.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sprites/light.png" type="Texture" id=4]
[ext_resource path="res://game/arena/bricks/BrickLight.gd" type="Script" id=5]

[sub_resource type="PhysicsMaterial" id=7]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 5, 5 )

[sub_resource type="Animation" id=14]
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.7, 0.7 ) ]
}

[node name="BrickLight" type="StaticBody2D"]
collision_layer = 5
physics_material_override = SubResource( 7 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="BrickShadow" parent="." instance=ExtResource( 1 )]
casting_node_name = "Sprite"

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 48, 8, 8, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )
disabled = true

[node name="DetectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../DetectArea")
anims/outro = SubResource( 14 )

[node name="LightPoly" type="Polygon2D" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.235294 )
polygon = PoolVector2Array( -1, 2, 1, 2, 1, 1, 2, 1, 2, -1, 1, -1, 1, -2, -1, -2, -1, -1, -2, -1, -2, 1, -1, 1 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
scale = Vector2( 0.041958, 0.041958 )
enabled = false
texture = ExtResource( 4 )
color = Color( 0.952941, 0.356863, 0.498039, 1 )
mode = 2

[node name="Sounds" type="Node" parent="."]

[node name="MagnetLoop" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )
volume_db = -10.0
bus = "GameSfx"

[connection signal="body_entered" from="DetectArea" to="." method="_on_DetectArea_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_DetectArea_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
